--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --config webpack.config.dev.js",
-    "watch": "webpack --watch --config webpack.config.dev.js"
+    "watch": "webpack --watch --config webpack.config.dev.js",
+    "server": "node app/server/server.js",
+    "start": "concurrently --kill-others \"webpack --watch --config webpack.config.dev.js\" \"node app/server.js\"   \"browser-sync start --proxy 'localhost:3000' --files 'app/public' 'views'\""
   },
   "author": "",
   "license": "ISC",
@@ -17,22 +19,28 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2017": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^4.0.0-beta",
     "clean-webpack-plugin": "^0.1.17",
-    "concurrently": "^3.5.0",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.3",
     "css-loader": "^0.28.7",
     "exports-loader": "^0.6.4",
     "express": "^4.16.1",
     "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
     "extract-text-webpack-plugin": "^3.0.1",
     "file-loader": "^1.1.4",
     "handlebars": "^4.0.10",
     "html-webpack-plugin": "^2.30.1",
     "jquery": "^3.2.1",
+    "mongoose": "^4.12.4",
+    "morgan": "^1.9.0",
     "node-sass": "^4.5.3",
     "package.json": "^2.0.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^4.4.0",
     "pg": "^7.3.0",
     "pg-promise": "^6.10.3",
     "popper.js": "^1.12.5",
@@ -40,8 +48,14 @@
     "react-dom": "^16.0.0",
     "sass-loader": "^6.0.6",
     "style-loader": "^0.18.2",
+    "vue": "^2.5.2",
     "webpack": "^3.6.0",
     "webpack-dev-server": "^2.9.1",
     "webpack-merge": "^4.1.0"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.18.13",
+    "browser-sync-webpack-plugin": "^1.2.0",
+    "concurrently": "^3.5.0"
   }
 }
